--- a/bootcamp/materials/1-dimensional-data-modeling/example.env
+++ b/bootcamp/materials/1-dimensional-data-modeling/example.env
@@ -1,10 +1,10 @@
 POSTGRES_SCHEMA=postgres
 POSTGRES_USER=postgres
-POSTGRES_DB=postgres
+POSTGRES_DB=zach_data
 POSTGRES_PASSWORD=postgres
 
 HOST_PORT=5432
 CONTAINER_PORT=5432
 
-DOCKER_CONTAINER=my-postgres-container
-DOCKER_IMAGE=my-postgres-image
+DOCKER_CONTAINER=zach-postgres-container
+DOCKER_IMAGE=zach-postgres-image
